crates/scene/tests/snapshots/composition__clear_keybind_then_re_add_ok@clear_keybind_then_re_add.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:

keybinds:
  - chord: Alt p  intent: child.picker

plugins:

layout tabs:
