crates/scene/tests/snapshots/composition__compose_basic_include.snap
---
source: crates/scene/tests/composition.rs
expression: format_result(&result)
---
layouts: 1
  tabs: 1
    tab @editor
modes: 0
reactions: 1
  on "<none>"
binds: 0
uses: 0
