crates/scene/tests/snapshots/composition__compose_bind_last_wins.snap
---
source: crates/scene/tests/composition.rs
expression: format_result(&result)
---
layouts: 0
modes: 0
reactions: 0
binds: 1
  bind "Alt d"
uses: 0
