crates/scene/tests/snapshots/composition__compose_clear_bind.snap
---
source: crates/scene/tests/composition.rs
expression: format_result(&result)
---
layouts: 0
modes: 0
reactions: 0
binds: 2
  bind "Alt n"
  bind "Alt x"
uses: 0
