crates/scene/tests/snapshots/composition__compose_clear_reactions.snap
---
source: crates/scene/tests/composition.rs
expression: format_result(&result)
---
layouts: 0
modes: 0
reactions: 3
  on "<none>"
  on "<none>"
  on "<none>"
binds: 0
uses: 0
