crates/scene/tests/snapshots/composition__compose_namespace_user_rewrite.snap
---
source: crates/scene/tests/composition.rs
expression: format_result(&result)
---
layouts: 0
modes: 0
reactions: 2
  on "<none>"
  on "<none>"
binds: 0
uses: 0
