crates/scene/tests/snapshots/composition__compose_nested_includes.snap
---
source: crates/scene/tests/composition.rs
expression: format_result(&result)
---
layouts: 1
  tabs: 1
    tab @main
modes: 0
reactions: 1
  on "<none>"
binds: 1
  bind "Alt z"
uses: 0
