crates/scene/tests/snapshots/composition__extends_with_includes_ok@extends_with_includes.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:
  - selector: AgentReady  if: -
  - selector: Stall  if: -
  - selector: UserEvent:user.ready  if: -

keybinds:

plugins:

layout tabs:
