crates/scene/tests/snapshots/composition__include_cycle_error@include_cycle.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
scene/include-cycle

  × include cycle detected through `<staging>/child.kdl`
   ╭─[<staging>/frag.kdl:1:1]
   ╰────
  help: Break the cycle: remove one `include` along the chain, or refactor shared content into an `extends` base scene.
